--- a/apache-install.yml
+++ b/apache-install.yml
@@ -6,5 +6,6 @@
       name: httpd
       state: latest
     register: install_result
-#    debug: install_result
+  - debug: 
+      var: install_result
 ...
