--- a/lvmdemo2.yml
+++ b/lvmdemo2.yml
@@ -5,7 +5,7 @@
   vars:
     whichhosts: all
     howbig: 10g
-  hosts: "{{ whichhosts }}"
+  hosts: "{{ which_hosts }}"
   tasks: 
   - name: Geate a logical volume group on /dev/vdb
     lvg:
