--- a/lvmdemo2.yml
+++ b/lvmdemo2.yml
@@ -3,7 +3,7 @@
   become: true
   remote: devops
   vars:
-    which_hosts: all
+  #  which_hosts: all
     howbig: 10g
   hosts: "{{ which_hosts }}"
   tasks: 
