fixed conditional reboot

--- a/systemupdate.yml
+++ b/systemupdate.yml
@@ -10,12 +10,20 @@
   - debug: 
     var: "{{ output }}"
 
+  - name: Check if reboot is necessary.
+    command: needs-restarting -r
+    register: reboot_check
+    changed_when: false
+    failed_when: reboot_check.rc > 1
+  
   - name: reboot if kernel is changed
     shell: sleep 2 && shutdown -r now "Rebooting from a playbook"
     async: 1
     poll: 0
     become: True
     ignore_errors: yes
+    when: 
+      - reboot_check.rc == 1
   
   - name: waiting for a machine to complete reboot
     become: False
