--- a/systemupdate.yml
+++ b/systemupdate.yml
@@ -17,6 +17,7 @@
   - name: Check if reboot is necessary.
     command: needs-restarting -r
     register: reboot_check
+    ignore_errors: true
     # changed_when: false
     # failed_when: reboot_check.rc > 1
   
