root password playbook added

--- a/change-root-password.yml
+++ b/change-root-password.yml
@@ -1,11 +1,11 @@
 ---
 - name: Change root password
-  hosts: "{{ target_hosts | default('linux') }}"
+  hosts: "{{ hosts_to_update }}"
   become: yes
 
   vars:
-    root_password: "{{ new_root_password }}"
-    root_password_salt: afEMnMOBZgYNhoqA
+    root_password: "{{ replacement_root_password }}"
+    root_password_salt: afEMnZBOGgynhoqA
 
   tasks:
     - name: Change root password
