--- a/userplay.yml
+++ b/userplay.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure important user consistently
-  hosts: servera.lab.example.com
+  hosts: all
   tasks:
     - name: newbie exists with UID 4000
       user:
