--- a/firewall.yml
+++ b/firewall.yml
@@ -10,6 +10,7 @@
       git:
         repo: https://github.com/jimbarlow/ansible-demo
         dest: downloaded
+      delegate_to: localhost
 
     - name: 
       include_role: 
