--- a/firewall.yml
+++ b/firewall.yml
@@ -11,6 +11,7 @@
         repo: https://github.com/jimbarlow/ansible-demo
         dest: downloaded
       delegate_to: localhost
+      become: true
 
     - name: 
       include_role: 
