--- a/firewall.yml
+++ b/firewall.yml
@@ -7,12 +7,11 @@
   tasks:
 
     - name: Bring down repo with git
-      local_action:
       git:
         repo: https://github.com/jimbarlow/ansible-demo
         dest: downloaded
-     #   delegate_to: localhost
-     #   become: true
+      delegate_to: localhost
+      become: true
 
     - name: 
       include_role: 
